add new mysql dump

--- a/docker-compose/dev/README
+++ b/docker-compose/dev/README
@@ -2,3 +2,7 @@
 ```
 sudo docker exec -i mysql sh -c 'exec mysql -u"${MYSQL_USER}" -p"${MYSQL_PASSWORD}" blog' < ../../documents/mysqldump/sqldump.sql
 ```
+## How to export data in mysql?
+```
+sudo docker exec -i mysql sh -c 'exec mysql -u"${MYSQL_USER}" -p"${MYSQL_PASSWORD}" blog' > ../../documents/mysqldump/sqldump.sql
+```
